# cc-plugin-cc6

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  main.yml  release-pypi.yaml
cc_plugin_cc6/: base.py  cc6.py  tables.py  utils.py
ci/requirements/: environment.yml
tests/: _commons.py  test_cc6.py  test_utils.py
