[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core >=3.8,<4",
]

[project]
name = "cc-plugin-cc6"
description = "Compliance Checker CORDEX-CMIP6 plugin"
keywords = ["compliance checker", "plugin", "cordex", "cordex-cmip6"]
readme.content-type = "text/markdown"
readme.file = "README.md"
license = { text = "Apache-2.0" }
maintainers = [
  { name = "Martin Schupfner", email = "schupfner@dkrz.de" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "cftime",
  "cf_xarray",
  "compliance-checker",
  "netCDF4",
  "pandas",
  "xarray"
]
dynamic = [
  "version",
]
urls.documentation = "http://ioos.github.io/compliance-checker/"
urls.homepage = "https://github.com/sol1105/cc-plugin-cc6"
urls.repository = "https://github.com/sol1105/cc-plugin-cc6"

[project.optional-dependencies]
dev = [
  "black",
  "bump2version",
  "isort",
  "flake8",
  "flake8-builtins",
  "flake8-comprehensions",
  "flake8-mutable",
  "flake8-print",
  "pre-commit",
  "pytest>=7.0.0",
  "pytest-flake8",
  "ruff>=0.1.0",
]

[project.entry-points."compliance_checker.suites"]
cc6 = "cc_plugin_cc6.base:CORDEXCMIP6"

[tool.black]
target-version = [
  "py38",
  "py39",
  "py310",
  "py311",
  "py312"
]

[tool.flit.sdist]
include = [
  "LICENSE",
  "README.md",
  "tests/*.py"
]
exclude = [
  "**/*.py[co]",
  "**/__pycache__",
  ".*",
]

[tool.isort]
profile = "black"
py_version = 38

[tool.ruff]
src = ["cc_plugin_cc6"]
line-length = 88
target-version = "py310"
ignore = ["E501"]
lint.select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "F",   # flakes
  "I",   # import sorting
  "T20", # flake8-print
  "UP",  # upgrade
]

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["cc_plugin_cc6"]
lines-after-imports = 1

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "Makefile",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.pytest.ini_options]
filterwarnings = [
  "error:::cc-plugin-cc6.*",
  "ignore::UserWarning",
  "ignore::RuntimeWarning",
]
